market summary with query param schema added to openapi yml file
