# app/market/views.py
@@ -13,3 +13,16 @@ def get_all_market_summaries():
     except Exception as e:
         details = "All market summaries api unable to read data - Exception occurred" + str(e)
         return helper.response_json('failed', {}, details, 500)
+
+
+def get_market_summary(market):
+    """
+    retrieve market summary with market query
+    :return:
+    """
+    try:
+        # code here
+        return helper.response_json('success', {"datas": []}, "fetched market summary successfully", 500)
+    except Exception as e:
+        details = "All market summaries api unable to read data - Exception occurred" + str(e)
+        return helper.response_json('failed', {}, details, 500)
